src/components/StatusDashboard/styles.module.css
.status_dashboard {
  margin: 0;
  max-width: 100%;
  min-height: 1000px;
}

.status_dashboard_toc {
  font-size: 16px;
  position: sticky;
  top: 80px;
}

.status_dashboard_toc a {
  text-decoration: none;
}

.status_dashboard_toc ul {
  padding: 0;
  list-style-type: none;
}

.toc_anchor {
  display: 'block';
  position: 'relative';
  top: -50;
  visibility: 'hidden';
}

